data/derived/fa15/progs/unify/prog3876.ml.out
Characters 57-70:
  (digitsOfInt n mod 10) :: numL
   ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
